@@ -4,6 +4,13 @@ isRebootRequested : http://askubuntu.com/questions/28530/how-can-i-tell-what-pac
 
 
 ##################################################################
+opsi-winst/opsi-script (4.12.1.0) stable; urgency=low
+
+  * osparser: new (undocumented) command 'setDebug_prog = (true/false)'
+  * osparser: new function GetMacosVersionInfo : string
+  * osparser: new function getMacosVersionMap : stringlist
+
+-- Detlef Oertel <d.oertel@uib.de>  Wed, 23 01 2019:15:00:00 +0200
 
 opsi-winst/opsi-script (4.12.0.33) stable; urgency=low
 
